# openfhe-lattice-estimator

./: CMakeLists.txt  README.md
scripts/: run_script.sh  run_script2.sh
scripts/paramsestimator/: binfhe_params.py  binfhe_params_helper.py  binfhe_params_validator.py  generate_std_tables.py  paramstable.py
src/: CMakeLists.txt  boolean_estimate_time.cpp  boolean_noise_estimate_script.cpp
